# Clapet

./: .gitignore  Cargo.toml  README.md  README.ru.md  diff.txt  index.html  main.js  package-lock.json  package.json  run.bat  vite.config.ts
.github/workflows/: build.yml  release.yml
clapet-tauri/: README.md  package-lock.json  package.json
clapet-tauri/.github/workflows/: release.yml
clapet-tauri/src/: App.css  App.tsx  PetSvg.tsx  styles.css
clapet-tauri/src-tauri/: Cargo.toml  tauri.conf.json
clapet-tauri/src-tauri/icons/: icon.icns
clapet-tauri/src-tauri/src/: lib.rs  main.rs
crates/cursor/: Cargo.toml
crates/cursor/src/: lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs
dist-renderer/: index.html
dist-renderer/assets/: index-BN1xDkQC.css  index-CnsLEDUr.js
src/: App.tsx  index.html  main.js  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/common/: ColorPicker.tsx  CustomSelect.tsx  Icons.tsx  RangeSlider.tsx  ToggleSwitch.tsx
src/components/launcher/: Launcher.tsx  LauncherHeader.tsx  LauncherNav.tsx  TabAISettings.tsx  TabLaunch.tsx  TabMainSettings.tsx  TabPetSettings.tsx
src/hooks/: useKeySpy.ts  useParticles.ts  usePetAnimation.ts  useSettings.ts  useWander.ts
src/services/: aiProviders.ts  electronIpc.ts  storage.ts  ttsService.ts
src/styles/: ai-settings.css  effects.css  launcher.css  message-window.css  pet.css  radial-menu.css  splash.css  variables.css
src/types/: ai.ts  pet.ts  settings.ts
(+15 files in other folders)
