[package]
name = "app"
version = "0.2.0"
description = "Clapet Desktop Pet App"
authors = ["S1sTeam"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

cursor = { path = "../crates/cursor" }
window = { path = "../crates/window" }
proxy = { path = "../crates/proxy" }
